@@ -1,3 +1,6 @@
+Version
+  Added delete offline nodes to NodesViewAdvanced menu
+
 Version 0.18.0
   Make some texts look nicer. (PR #9)
   Fixed MFD dialog not listing file without timestamp
